update use case

--- a/examples/NYC_Taxi.ipynb
+++ b/examples/NYC_Taxi.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## NYC_Taxi Fare Prediction with Raydp"
+    "## NYC_Taxi Fare Prediction with RayDp"
    ]
   },
   {
@@ -42,8 +42,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Firstly, You should init or connect to a ray cluster. Note that you should set include_java to True\n",
-    "# For more config in ray, you can refer the ray doc\n",
+    "# Firstly, You need to init or connect to a ray cluster. Note that you should set include_java to True\n",
+    "# For more config info in ray, please refer the ray doc. https://docs.ray.io/en/latest/package-ref.html\n",
     "# ray.init(address=\"auto\", redis_password=\"123\")\n",
     "ray.init(include_java=True)"
    ]
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "# After initialize ray cluster, you can use the raydp api to get a spark session\n",
-    "spark = context.init_spark(\"raydp use case\", 2, 1, 5*1024*1024*1024)"
+    "spark = context.init_spark(\"raydp use case\", 2, 1, \"5GB\")"
    ]
   },
   {
@@ -79,6 +79,7 @@
    "outputs": [],
    "source": [
     "# Then you can operate as you are using spark\n",
+    "# The dataset can be downloaded from https://www.kaggle.com/c/new-york-city-taxi-fare-prediction/data\n",
     "data = spark.read.format(\"csv\").option(\"header\", \"true\") \\\n",
     "        .option(\"inferSchema\", \"true\") \\\n",
     "        .load(\"/mnt/DP_disk8/nyc_taxi.csv\")"
@@ -106,7 +107,8 @@
     "    .filter(abs(train_data['dropoff_longitude']-train_data['pickup_longitude'])<=5) \\\n",
     "    .filter(abs(train_data['dropoff_latitude']-train_data['pickup_latitude'])<=5)\n",
     "# add two new features\n",
-    "train_data_select = train_data_select.withColumn(\"abs_diff_longitude\", abs(col(\"dropoff_longitude\")-col(\"pickup_longitude\"))).withColumn(\"abs_diff_latitude\", abs(col(\"dropoff_latitude\") - col(\"pickup_latitude\")))"
+    "train_data_select = train_data_select.withColumn(\"abs_diff_longitude\", abs(col(\"dropoff_longitude\")-col(\"pickup_longitude\"))) \\\n",
+    "                    .withColumn(\"abs_diff_latitude\", abs(col(\"dropoff_latitude\") - col(\"pickup_latitude\")))"
    ]
   },
   {
@@ -171,7 +173,9 @@
    "outputs": [],
    "source": [
     "# Create a distributed estimator based on the raydp api\n",
-    "estimator = TorchEstimator(num_workers=4, model=nyc_model, optimizer=optimizer, loss=criterion, feature_columns=[\"pickup_longitude\",\"pickup_latitude\",\"dropoff_longitude\",\"dropoff_latitude\",\"passenger_count\",\"abs_diff_longitude\", \"abs_diff_latitude\"], label_column=\"fare_amount\", batch_size=100, num_epochs=100)"
+    "features = [field.name for field in list(train_data_select.schema) if field.name != \"fare_amount\"]\n",
+    "estimator = TorchEstimator(num_workers=4, model=nyc_model, optimizer=optimizer, loss=criterion, \n",
+    "                           feature_columns=features, label_column=\"fare_amount\", batch_size=100, num_epochs=100)"
    ]
   },
   {
