Simplify the build and update doc (#42)

--- a/examples/NYC_Taxi.ipynb
+++ b/examples/NYC_Taxi.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## NYC_Taxi Fare Prediction with RayDp"
+    "# NYC_Taxi Fare Prediction with RayDP"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Initialize ray cluster"
+    "## Initialize or connect to existed Ray cluster"
    ]
   },
   {
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Firstly, You need to init or connect to a ray cluster. Note that you should set include_java to True\n",
+    "# Firstly, You need to init or connect to a ray cluster. Note that you should set include_java to True.\n",
     "# For more config info in ray, please refer the ray doc. https://docs.ray.io/en/latest/package-ref.html\n",
     "# ray.init(address=\"auto\", redis_password=\"123\")\n",
     "ray.init(include_java=True)"
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create spark session based on Raydp api"
+    "## Create Spark session based on RayDP API"
    ]
   },
   {
@@ -62,19 +62,23 @@
    "outputs": [],
    "source": [
     "# After initialize ray cluster, you can use the raydp api to get a spark session\n",
-    "spark = context.init_spark(\"raydp use case\", 2, 1, \"5GB\")"
+    "app_name = \"NYC_Taxi Fare Prediction with RayDP\"\n",
+    "num_executors = 2\n",
+    "cores_per_executor = 1\n",
+    "memory_per_executor = \"5GB\"\n",
+    "spark = context.init_spark(app_name, num_executors, cores_per_executor, memory_per_executor)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load and process data based on spark api"
+    "## Distributed data preprocessing with pyspark"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,28 +91,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = data\n",
     "# filter data\n",
-    "train_data_select = train_data.select(\"pickup_longitude\",\"pickup_latitude\",\"dropoff_longitude\",\"dropoff_latitude\",\"passenger_count\",\"fare_amount\") \\\n",
-    "    .filter(train_data['pickup_longitude']<=-73.0) \\\n",
-    "    .filter(train_data['pickup_longitude']>=-74.3) \\\n",
-    "    .filter(train_data['dropoff_longitude']<=-73.0) \\\n",
-    "    .filter(train_data['dropoff_longitude']>=-74.3) \\\n",
-    "    .filter(train_data['pickup_latitude']<=41.7) \\\n",
-    "    .filter(train_data['pickup_latitude']>=40.6) \\\n",
-    "    .filter(train_data['dropoff_latitude']<=41.7) \\\n",
-    "    .filter(train_data['dropoff_latitude']>=40.6) \\\n",
-    "    .filter(train_data['passenger_count']<=10) \\\n",
-    "    .filter(train_data['fare_amount'] >= 0.0) \\\n",
-    "    .filter(abs(train_data['dropoff_longitude']-train_data['pickup_longitude'])<=5) \\\n",
-    "    .filter(abs(train_data['dropoff_latitude']-train_data['pickup_latitude'])<=5)\n",
+    "data = data.select(\"pickup_longitude\", \"pickup_latitude\", \"dropoff_longitude\", \"dropoff_latitude\", \"passenger_count\", \"fare_amount\") \\\n",
+    "    .filter(data['pickup_longitude'] <= -73.0)  \\\n",
+    "    .filter(data['pickup_longitude'] >= -74.3)  \\\n",
+    "    .filter(data['dropoff_longitude'] <= -73.0) \\\n",
+    "    .filter(data['dropoff_longitude'] >= -74.3) \\\n",
+    "    .filter(data['pickup_latitude'] <= 41.7)    \\\n",
+    "    .filter(data['pickup_latitude'] >= 40.6)    \\\n",
+    "    .filter(data['dropoff_latitude'] <= 41.7)   \\\n",
+    "    .filter(data['dropoff_latitude'] >= 40.6)   \\\n",
+    "    .filter(data['passenger_count'] <= 10)      \\\n",
+    "    .filter(data['fare_amount'] >= 0.0)         \\\n",
+    "    .filter(abs(data['dropoff_longitude'] - data['pickup_longitude']) <= 5) \\\n",
+    "    .filter(abs(data['dropoff_latitude'] - data['pickup_latitude']) <= 5)\n",
     "# add two new features\n",
-    "train_data_select = train_data_select.withColumn(\"abs_diff_longitude\", abs(col(\"dropoff_longitude\")-col(\"pickup_longitude\"))) \\\n",
-    "                    .withColumn(\"abs_diff_latitude\", abs(col(\"dropoff_latitude\") - col(\"pickup_latitude\")))"
+    "data = data.withColumn(\"abs_diff_longitude\", abs(col(\"dropoff_longitude\") - col(\"pickup_longitude\"))) \\\n",
+    "           .withColumn(\"abs_diff_latitude\", abs(col(\"dropoff_latitude\") - col(\"pickup_latitude\")))"
    ]
   },
   {
@@ -117,19 +120,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data_select.show()"
+    "# split data into train_dataset and test_dataset\n",
+    "train_df, test_df = random_split(data, [0.7, 0.3])\n",
+    "# train_df = train_data_select.sample(False, 0.0005)\n",
+    "# test_df = train_data_select.sample(False, 0.0001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model training and evaluation using Raydp with Pytorch"
+    "## Distributed model training and evaluation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,26 +180,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# split data into train_dataset and test_dataset\n",
-    "train_df, test_df = random_split(train_data_select, [0.7, 0.3])\n",
-    "# train_df = train_data_select.sample(False, 0.0005)\n",
-    "# test_df = train_data_select.sample(False, 0.0001)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a distributed estimator based on the raydp api\n",
+    "# create the estimator which is a scikit-learn like API for Torch distributed model training\n",
     "features = [field.name for field in list(train_data_select.schema) if field.name != \"fare_amount\"]\n",
-    "estimator = TorchEstimator(num_workers=4, model=nyc_model, optimizer=optimizer, loss=criterion, \n",
-    "                           feature_columns=features, label_column=\"fare_amount\", batch_size=100, num_epochs=100)"
+    "estimator = TorchEstimator(num_workers=4,\n",
+    "                           model=nyc_model,\n",
+    "                           optimizer=optimizer,\n",
+    "                           loss=criterion, \n",
+    "                           feature_columns=features,\n",
+    "                           label_column=\"fare_amount\",\n",
+    "                           batch_size=100,\n",
+    "                           num_epochs=100)"
    ]
   },
   {
@@ -184,7 +202,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Train the model\n",
+    "# distributed training the model\n",
     "estimator.fit(train_df)"
    ]
   },
@@ -194,13 +212,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Evaluate the model\n",
+    "# evaluate the model\n",
     "estimator.evaluate(test_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,9 +231,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ray] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-ray-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -227,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
