--- a/examples/pytorch/pytorch_nyctaxi.ipynb
+++ b/examples/pytorch/pytorch_nyctaxi.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NYC_Taxi Fare Prediction with RayDP"
+    "# NYC Taxi Fare Prediction with RayDP and Pytorch"
    ]
   },
   {
@@ -23,9 +23,9 @@
     "\n",
     "from pyspark.sql.functions import *\n",
     "\n",
-    "from raydp.spark import context\n",
-    "from raydp.spark.torch.estimator import TorchEstimator\n",
-    "from raydp.spark.utils import random_split"
+    "import raydp\n",
+    "from raydp.torch.estimator import TorchEstimator\n",
+    "from raydp.utils import random_split"
    ]
   },
   {
@@ -54,11 +54,11 @@
    "outputs": [],
    "source": [
     "# After initialize ray cluster, you can use the raydp api to get a spark session\n",
-    "app_name = \"NYC_Taxi Fare Prediction with RayDP\"\n",
+    "app_name = \"NYC Taxi Fare Prediction with RayDP\"\n",
     "num_executors = 4\n",
     "cores_per_executor = 1\n",
-    "memory_per_executor = \"5GB\"\n",
-    "spark = context.init_spark(app_name, num_executors, cores_per_executor, memory_per_executor)"
+    "memory_per_executor = \"2GB\"\n",
+    "spark = raydp.init_spark(app_name, num_executors, cores_per_executor, memory_per_executor)"
    ]
   },
   {
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Then you can operate as you are using spark\n",
+    "# Then you can code as you are using spark\n",
     "# The dataset can be downloaded from https://www.kaggle.com/c/new-york-city-taxi-fare-prediction/data\n",
     "# Here we just use a subset of the training data\n",
     "train = spark.read.format(\"csv\").option(\"header\", \"true\") \\\n",
@@ -93,6 +93,7 @@
    "source": [
     "# Clean up the outlier\n",
     "def clean_up(data):\n",
+    "    \n",
     "    data = data.filter(col('pickup_longitude')<=-72) \\\n",
     "            .filter(col('pickup_longitude')>=-76) \\\n",
     "            .filter(col('dropoff_longitude')<=-72) \\\n",
@@ -119,6 +120,7 @@
    "source": [
     "# Add time related features\n",
     "def add_time_features(data):\n",
+    "    \n",
     "    data = data.withColumn(\"day\", dayofmonth(col(\"pickup_datetime\")))\n",
     "    data = data.withColumn(\"hour_of_day\", hour(col(\"pickup_datetime\")))\n",
     "    data = data.withColumn(\"day_of_week\", dayofweek(col(\"pickup_datetime\"))-2)\n",
@@ -165,6 +167,7 @@
     "    ewr = (-74.175, 40.69)\n",
     "    lgr = (-73.87, 40.77)\n",
     "    \n",
+    "    # Features about the distance between pickup/dropoff and airport\n",
     "    data = data.withColumn(\"abs_diff_longitude\", abs(col(\"dropoff_longitude\")-col(\"pickup_longitude\"))) \\\n",
     "            .withColumn(\"abs_diff_latitude\", abs(col(\"dropoff_latitude\") - col(\"pickup_latitude\")))\n",
     "    data = data.withColumn(\"manhattan\", col(\"abs_diff_latitude\")+col(\"abs_diff_longitude\"))\n",
@@ -188,6 +191,7 @@
    "source": [
     "# Drop unused features\n",
     "def drop_col(data):\n",
+    "    \n",
     "    data = data.drop(\"pickup_datetime\") \\\n",
     "            .drop(\"pickup_longitude\") \\\n",
     "            .drop(\"pickup_latitude\") \\\n",
@@ -280,7 +284,7 @@
    "outputs": [],
    "source": [
     "# Create a distributed estimator based on the raydp api\n",
-    "estimator = TorchEstimator(num_workers=6, model=nyc_model, optimizer=optimizer, loss=criterion,\n",
+    "estimator = TorchEstimator(num_workers=4, model=nyc_model, optimizer=optimizer, loss=criterion,\n",
     "                            feature_columns=features, label_column=\"fare_amount\", batch_size=256, num_epochs=30)"
    ]
   },
@@ -291,7 +295,7 @@
    "outputs": [],
    "source": [
     "# Train the model\n",
-    "estimator.fit(train_df)"
+    "estimator.fit_on_spark(train_df)"
    ]
   },
   {
@@ -301,7 +305,7 @@
    "outputs": [],
    "source": [
     "# Evaluate the model\n",
-    "estimator.evaluate(test_df)"
+    "estimator.evaluate_on_spark(test_df)"
    ]
   },
   {
@@ -312,7 +316,7 @@
    "source": [
     "# shutdown raydp and ray\n",
     "estimator.shutdown()\n",
-    "context.stop_spark()\n",
+    "raydp.stop_spark()\n",
     "ray.shutdown()"
    ]
   }
