--- a/examples/pytorch_nyctaxi.ipynb
+++ b/examples/pytorch_nyctaxi.ipynb
@@ -210,11 +210,8 @@
    "outputs": [],
    "source": [
     "train_data = clean_up(train)\n",
-    "\n",
     "train_data = add_time_features(train_data)\n",
-    "\n",
     "train_data = add_distance_features(train_data)\n",
-    "\n",
     "train_data = drop_col(train_data)"
    ]
   },
@@ -285,7 +282,8 @@
    "source": [
     "# Create a distributed estimator based on the raydp api\n",
     "estimator = TorchEstimator(num_workers=4, model=nyc_model, optimizer=optimizer, loss=criterion,\n",
-    "                            feature_columns=features, label_column=\"fare_amount\", batch_size=256, num_epochs=30)"
+    "                           feature_columns=features, label_column=\"fare_amount\", batch_size=256,\n",
+    "                           num_epochs=30)"
    ]
   },
   {
@@ -327,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
