--- a/examples/tensorflow_titanic.ipynb
+++ b/examples/tensorflow_titanic.ipynb
@@ -159,8 +159,8 @@
     "        title_match = re.search(' ([A-Za-z]+)\\.', name)\n",
     "        if (title_match):\n",
     "            title = title_match.group(1)\n",
-    "            if (title in ['Lady', 'Countess','Capt', 'Col','Don', \n",
-    "                      'Dr', 'Major', 'Rev', 'Sir', 'Jonkheer', 'Dona']):\n",
+    "            if (title in ['Lady', 'Countess','Capt', 'Col','Don', 'Dr',\n",
+    "                          'Major', 'Rev', 'Sir', 'Jonkheer', 'Dona']):\n",
     "                title = 'Rare'\n",
     "            return title\n",
     "        return title\n",
@@ -356,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
