upgrade ray and use MLDataset

--- a/examples/pytorch/pytorch_nyctaxi.ipynb
+++ b/examples/pytorch/pytorch_nyctaxi.ipynb
@@ -295,17 +295,7 @@
    "outputs": [],
    "source": [
     "# Train the model\n",
-    "estimator.fit_on_spark(train_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Evaluate the model\n",
-    "estimator.evaluate_on_spark(test_df)"
+    "estimator.fit_on_spark(train_df, test_df)"
    ]
   },
   {
@@ -323,9 +313,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ray] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-ray-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -337,7 +327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
