--- a/examples/tensorflow/tensorflow_nyctaxi.ipynb
+++ b/examples/tensorflow/tensorflow_nyctaxi.ipynb
@@ -48,7 +48,7 @@
    "source": [
     "# For more config info in ray, please refer the ray doc. https://docs.ray.io/en/latest/package-ref.html\n",
     "# ray.init(address=\"auto\", redis_password=\"123\")\n",
-    "ray.init(include_java=True)"
+    "ray.init()"
    ]
   },
   {
@@ -366,7 +366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
