--- a/examples/tensorflow/tensorflow_titanic.ipynb
+++ b/examples/tensorflow/tensorflow_titanic.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ray.init(include_java=True)"
+    "ray.init()"
    ]
   },
   {
@@ -374,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
