--- a/examples/pytorch/pytorch_nyctaxi.ipynb
+++ b/examples/pytorch/pytorch_nyctaxi.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
     "# Firstly, You need to init or connect to a ray cluster. Note that you should set include_java to True.\n",
     "# For more config info in ray, please refer the ray doc. https://docs.ray.io/en/latest/package-ref.html\n",
     "# ray.init(address=\"auto\", redis_password=\"123\")\n",
-    "ray.init(include_java=True)"
+    "ray.init()"
    ]
   },
   {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,8 +258,8 @@
     "        self.bn3 = nn.BatchNorm1d(64)\n",
     "        self.bn4 = nn.BatchNorm1d(16)\n",
     "\n",
-    "    def forward(self, x):\n",
-    "        \n",
+    "    def forward(self, *x):\n",
+    "        x = torch.cat(x, dim=1)\n",
     "        x = F.relu(self.fc1(x))\n",
     "        x = self.bn1(x)\n",
     "        x = F.relu(self.fc2(x))\n",
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,22 +295,12 @@
    "outputs": [],
    "source": [
     "# Train the model\n",
-    "estimator.fit_on_spark(train_df)"
+    "estimator.fit_on_spark(train_df, test_df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Evaluate the model\n",
-    "estimator.evaluate_on_spark(test_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,9 +313,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ray] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-ray-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -337,7 +327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
