--- a/examples/tensorflow/tensorflow_nyctaxi.ipynb
+++ b/examples/tensorflow/tensorflow_nyctaxi.ipynb
@@ -48,7 +48,7 @@
    "source": [
     "# For more config info in ray, please refer the ray doc. https://docs.ray.io/en/latest/package-ref.html\n",
     "# ray.init(address=\"auto\", redis_password=\"123\")\n",
-    "ray.init(include_java=True)"
+    "ray.init()"
    ]
   },
   {
@@ -335,16 +335,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "estimator.fit_on_spark(train_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "estimator.evaluate_on_spark(test_df)"
+    "estimator.fit_on_spark(train_df, test_df)"
    ]
   },
   {
@@ -361,9 +352,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ray] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-ray-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -375,7 +366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
