--- a/examples/tensorflow/tensorflow_titanic.ipynb
+++ b/examples/tensorflow/tensorflow_titanic.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ray.init(include_java=True)"
+    "ray.init()"
    ]
   },
   {
@@ -342,7 +342,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "estimator.fit_on_spark(train)"
+    "estimator.fit_on_spark(train, None)"
    ]
   },
   {
@@ -360,9 +360,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ray] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-ray-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -374,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
