--- a/examples/pytorch_dlrm.ipynb
+++ b/examples/pytorch_dlrm.ipynb
@@ -514,7 +514,7 @@
    "outputs": [],
    "source": [
     "# connect to ray cluster or init\n",
-    "ray.init(include_java=True, redis_password=\"123\")\n",
+    "ray.init(_redis_password=\"123\")\n",
     "# start up spark\n",
     "spark = raydp.init_spark(app_name=\"dlrm\",\n",
     "                         num_executors=2,\n",
@@ -579,8 +579,7 @@
     "                           num_epochs=2,\n",
     "                           use_gpu=False)\n",
     "\n",
-    "estimator.fit_on_spark(train_df)\n",
-    "estimator.evaluate_on_spark(test_df)"
+    "estimator.fit_on_spark(train_df, test_df)"
    ]
   },
   {
@@ -588,7 +587,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "estimator.shutdown()\n",
+    "raydp.stop_spark()\n",
+    "ray.shutdown()"
+   ]
   }
  ],
  "metadata": {
