--- a/examples/pytorch_dlrm.ipynb
+++ b/examples/pytorch_dlrm.ipynb
@@ -43,6 +43,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "del os.environ[\"http_proxy\"]\n",
+    "del os.environ[\"https_proxy\"]\n",
+    "\n",
     "from contextlib import contextmanager\n",
     "from operator import itemgetter\n",
     "from time import time\n",
@@ -482,8 +486,8 @@
     "\n",
     "    def forward(self, *inputs):\n",
     "        inputs = list(inputs)\n",
-    "        numerical_input = torch.stack(inputs[0: self.num_numerical_features], dim=1)\n",
-    "        categorical_inputs = torch.stack(inputs[self.num_numerical_features:], dim=1)\n",
+    "        numerical_input = torch.cat(inputs[0: self.num_numerical_features], dim=1)\n",
+    "        categorical_inputs = torch.cat(inputs[self.num_numerical_features:], dim=1)\n",
     "        bottom_output, bottom_mlp_output = self.bottom_model(numerical_input, categorical_inputs)\n",
     "        return self.top_model(bottom_output, bottom_mlp_output)"
    ]
@@ -518,8 +522,8 @@
     "# start up spark\n",
     "spark = raydp.init_spark(app_name=\"dlrm\",\n",
     "                         num_executors=2,\n",
-    "                         executor_cores=1,\n",
-    "                         executor_memory=\"1GB\")\n",
+    "                         executor_cores=4,\n",
+    "                         executor_memory=\"8GB\")\n",
     "spark"
    ]
   },
@@ -563,7 +567,6 @@
     "feature_columns = ['_c%d' % i for i in range(1, 40)]\n",
     "feature_types = [torch.float32] * len(INT_COLS)\n",
     "feature_types += [torch.long] * len(CAT_COLS)\n",
-    "feature_shapes = [[0] for i in range(1, 40)]\n",
     "\n",
     "estimator = TorchEstimator(num_workers=2,\n",
     "                           model=model,\n",
@@ -571,11 +574,9 @@
     "                           loss=loss_fn,\n",
     "                           feature_columns=feature_columns,\n",
     "                           feature_types=feature_types,\n",
-    "                           feature_shapes=feature_shapes,\n",
     "                           label_column=\"_c0\",\n",
-    "                           label_shape=-1,\n",
     "                           label_type=torch.float,\n",
-    "                           batch_size=2,\n",
+    "                           batch_size=128,\n",
     "                           num_epochs=2,\n",
     "                           use_gpu=False)\n",
     "\n",
