--- a/examples/pytorch_dlrm.ipynb
+++ b/examples/pytorch_dlrm.ipynb
@@ -43,6 +43,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "del os.environ[\"http_proxy\"]\n",
+    "del os.environ[\"https_proxy\"]\n",
+    "\n",
     "from contextlib import contextmanager\n",
     "from operator import itemgetter\n",
     "from time import time\n",
