--- a/examples/pytorch_dlrm.ipynb
+++ b/examples/pytorch_dlrm.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "```text\n",
-    "# Copyright (c) 2020 NVIDIA CORPORATION. All rights reserved.<br/>\n",
+    "# Copyright (c) 2020 NVIDIA CORPORATION. All rights reserved.\n",
     "# Modifications copyright Intel\n",
     "# \n",
     "#\n",
