[follow-up] dlrm example style (#92)

--- a/examples/pytorch_dlrm.ipynb
+++ b/examples/pytorch_dlrm.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```text\n",
     "# Copyright (c) 2020 NVIDIA CORPORATION. All rights reserved.\n",
     "# Modifications copyright Intel\n",
     "# \n",
@@ -18,7 +19,8 @@
     "# distributed under the License is distributed on an \"AS IS\" BASIS,\n",
     "# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
     "# See the License for the specific language governing permissions and\n",
-    "# limitations under the License."
+    "# limitations under the License.\n",
+    "```"
    ]
   },
   {
