--- a/examples/pytorch_nyctaxi.ipynb
+++ b/examples/pytorch_nyctaxi.ipynb
@@ -77,9 +77,10 @@
     "# Then you can code as you are using spark\n",
     "# The dataset can be downloaded from https://www.kaggle.com/c/new-york-city-taxi-fare-prediction/data\n",
     "# Here we just use a subset of the training data\n",
+    "path_to_csv = 'your_path_to_csv'\n",
     "train = spark.read.format(\"csv\").option(\"header\", \"true\") \\\n",
     "        .option(\"inferSchema\", \"true\") \\\n",
-    "        .load(\"/mnt/DP_disk8/nyc_train.csv\")\n",
+    "        .load(path_to_csv)\n",
     "\n",
     "# Set spark timezone for processing datetime\n",
     "spark.conf.set(\"spark.sql.session.timeZone\", \"UTC\")"
@@ -267,7 +268,7 @@
     "        x = self.bn4(x)\n",
     "        x = self.fc5(x)\n",
     "        \n",
-    "        return x.squeeze(1)\n",
+    "        return x\n",
     "\n",
     "nyc_model = NYC_Model(len(features))\n",
     "criterion = nn.SmoothL1Loss()\n",
