--- a/examples/xgboost_ray_nyctaxi.ipynb
+++ b/examples/xgboost_ray_nyctaxi.ipynb
@@ -16,6 +16,8 @@
     "import ray\n",
     "import numpy as np\n",
     "from pyspark.sql.functions import *\n",
+    "# XGBoost on ray is needed to run this example.\n",
+    "# Please refer to https://docs.ray.io/en/latest/xgboost-ray.html to install it.\n",
     "from xgboost_ray import RayDMatrix, train, RayParams\n",
     "import raydp\n",
     "from raydp.utils import random_split\n",
