--- a/examples/pytorch_dlrm.ipynb
+++ b/examples/pytorch_dlrm.ipynb
@@ -591,7 +591,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "estimator.shutdown()\n",
     "raydp.stop_spark()\n",
     "ray.shutdown()"
    ]
@@ -599,7 +598,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.8 64-bit ('raydp')",
    "language": "python",
    "name": "python3"
   },
@@ -613,7 +612,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.8.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a245fd77c683bafec11b88c8942e774aac894382a1d1374b683647c914121f01"
+   }
   }
  },
  "nbformat": 4,
