--- a/examples/tensorflow_titanic.ipynb
+++ b/examples/tensorflow_titanic.ipynb
@@ -314,7 +314,7 @@
     "rmsp = keras.optimizers.RMSprop()\n",
     "loss = keras.losses.BinaryCrossentropy()\n",
     "estimator = TFEstimator(num_workers=4, model=model, optimizer=rmsp, loss=loss, metrics=[\"binary_accuracy\"],\n",
-    "                        feature_columns=features, label_column=\"Survived\", batch_size=32, num_epochs=100,\n",
+    "                        feature_columns=features, label_columns=\"Survived\", batch_size=32, num_epochs=100,\n",
     "                        config={\"fit_config\": {\"steps_per_epoch\": train.count() // 32}})"
    ]
   },
@@ -341,7 +341,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.8 64-bit ('raydp')",
    "language": "python",
    "name": "python3"
   },
@@ -355,7 +355,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.8.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a245fd77c683bafec11b88c8942e774aac894382a1d1374b683647c914121f01"
+   }
   }
  },
  "nbformat": 4,
