add java options for java17 in all examples

--- a/examples/tensorflow_titanic.ipynb
+++ b/examples/tensorflow_titanic.ipynb
@@ -73,7 +73,39 @@
     "num_executors = 4\n",
     "cores_per_executor = 1\n",
     "memory_per_executor = \"1GB\"\n",
-    "spark = raydp.init_spark(app_name, num_executors, cores_per_executor, memory_per_executor)"
+    "\n",
+    "# JDK 17+ requires --add-opens for reflective access and --add-exports for direct access\n",
+    "# to internal JDK modules. These are needed for Spark, Ray serialization, and RayDP.\n",
+    "java_opts = \" \".join([\n",
+    "    \"-XX:+IgnoreUnrecognizedVMOptions\",\n",
+    "    \"--add-opens=java.base/java.lang=ALL-UNNAMED\",\n",
+    "    \"--add-opens=java.base/java.lang.invoke=ALL-UNNAMED\",\n",
+    "    \"--add-opens=java.base/java.io=ALL-UNNAMED\",\n",
+    "    \"--add-opens=java.base/java.net=ALL-UNNAMED\",\n",
+    "    \"--add-opens=java.base/java.nio=ALL-UNNAMED\",\n",
+    "    \"--add-opens=java.base/java.math=ALL-UNNAMED\",\n",
+    "    \"--add-opens=java.base/java.text=ALL-UNNAMED\",\n",
+    "    \"--add-opens=java.base/java.util=ALL-UNNAMED\",\n",
+    "    \"--add-opens=java.base/java.util.concurrent=ALL-UNNAMED\",\n",
+    "    \"--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED\",\n",
+    "    \"--add-opens=java.base/sun.nio.ch=ALL-UNNAMED\",\n",
+    "    \"--add-opens=java.base/sun.nio.cs=ALL-UNNAMED\",\n",
+    "    \"--add-opens=java.base/sun.security.action=ALL-UNNAMED\",\n",
+    "    \"--add-opens=java.base/sun.util.calendar=ALL-UNNAMED\",\n",
+    "])\n",
+    "extra_configs = {\n",
+    "    \"spark.executor.extraJavaOptions\": java_opts,\n",
+    "    \"spark.driver.extraJavaOptions\": java_opts,\n",
+    "    \"spark.ray.raydp_app_master.extraJavaOptions\": java_opts,\n",
+    "}\n",
+    "\n",
+    "spark = raydp.init_spark(\n",
+    "    app_name=app_name, \n",
+    "    num_executors=num_executors, \n",
+    "    cores_per_executor=cores_per_executor, \n",
+    "    memory_per_executor=memory_per_executor,\n",
+    "    configs=extra_configs\n",
+    ")"
    ]
   },
   {
