--- a/examples/pytorch_dlrm.ipynb
+++ b/examples/pytorch_dlrm.ipynb
@@ -522,10 +522,37 @@
     "# connect to ray cluster or init\n",
     "ray.init(_redis_password=\"123\")\n",
     "# start up spark\n",
+    "\n",
+    "# JDK 17+ requires --add-opens for reflective access and --add-exports for direct access\n",
+    "# to internal JDK modules. These are needed for Spark, Ray serialization, and RayDP.\n",
+    "java_opts = \" \".join([\n",
+    "    \"-XX:+IgnoreUnrecognizedVMOptions\",\n",
+    "    \"--add-opens=java.base/java.lang=ALL-UNNAMED\",\n",
+    "    \"--add-opens=java.base/java.lang.invoke=ALL-UNNAMED\",\n",
+    "    \"--add-opens=java.base/java.io=ALL-UNNAMED\",\n",
+    "    \"--add-opens=java.base/java.net=ALL-UNNAMED\",\n",
+    "    \"--add-opens=java.base/java.nio=ALL-UNNAMED\",\n",
+    "    \"--add-opens=java.base/java.math=ALL-UNNAMED\",\n",
+    "    \"--add-opens=java.base/java.text=ALL-UNNAMED\",\n",
+    "    \"--add-opens=java.base/java.util=ALL-UNNAMED\",\n",
+    "    \"--add-opens=java.base/java.util.concurrent=ALL-UNNAMED\",\n",
+    "    \"--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED\",\n",
+    "    \"--add-opens=java.base/sun.nio.ch=ALL-UNNAMED\",\n",
+    "    \"--add-opens=java.base/sun.nio.cs=ALL-UNNAMED\",\n",
+    "    \"--add-opens=java.base/sun.security.action=ALL-UNNAMED\",\n",
+    "    \"--add-opens=java.base/sun.util.calendar=ALL-UNNAMED\",\n",
+    "])\n",
+    "extra_configs = {\n",
+    "    \"spark.executor.extraJavaOptions\": java_opts,\n",
+    "    \"spark.driver.extraJavaOptions\": java_opts,\n",
+    "    \"spark.ray.raydp_app_master.extraJavaOptions\": java_opts,\n",
+    "}\n",
+    "\n",
     "spark = raydp.init_spark(app_name=\"dlrm\",\n",
     "                         num_executors=2,\n",
     "                         executor_cores=4,\n",
-    "                         executor_memory=\"8GB\")\n",
+    "                         executor_memory=\"8GB\",\n",
+    "                         configs=extra_configs)\n",
     "spark"
    ]
   },
